--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
     <title>Cálculos Pago Cervecería Rancho Grande</title>
     <link rel="stylesheet" href="Style.css">
     <script src="Script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.23/jspdf.plugin.autotable.min.js"></script>
 </head>
 <body>
     <div class="container">
         <h1>Cálculos Pago Cervecería Rancho Grande</h1>
+
+
+        <button id="generatePdfButton" class="generate-pdf">Generar Informe PDF</button>
         <table id="cervezaTable">
             <thead>
                 <tr>
